# PebbleRigidityTest

./: .gitignore  CMakeLists.txt  INPUT.TXT  Makefile  README.md  Test  external_facade.c  external_facade.h  globals.h  main.c  pebbleRigidity.c  pebbleRigidity.h  pebble_external_facade.c  pebble_external_facade.h  vertices.c  vertices.h
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
